# SAT_solver

./: .gitignore  16x16_gen_rules.txt  16x16_random.txt  4x4_jw.txt  4x4_moms.txt  4x4_random.txt  9x9_jw.txt  9x9_moms.txt  9x9_random.txt  CDCL_solver.py  MOMS_heuristic.py  QUALITY.md  README.md  SAT_deprecated_backtracking.py  SAT_helper_functions.py  SAT_solver.py  Sudoku_rstring_reader.py  clause_learning.py  distribution_test.py  easy_sudoku_dimac.txt  experiment.py  experiment16x.py  extreme_easy_sudoku.txt  gen_extremely_easy_sudoku.py  generate_16x16_rule.py  hexa-2.txt  krprojectsatsolver.py  main.py  online_sdk_reader.py  pyproject.toml  quality_sentinel.py  soundness_tests.py  sudoku-example.txt  test_problem_2.txt  testing_file_for_bash_call.txt.out  working_sat_solver.py
dimac_files/: test_problem_3.txt
docs/: python-quality-gate.md
experiment_results/: 16x16_jw.txt  16x16_moms.txt  4x4_jw.txt  9x9_jw.txt  9x9_moms.txt  9x9_random.txt
new_experiment_results/: 16x16_jw_backtracks.txt  16x16_jw_times.txt  16x16_moms_backtracks.txt  16x16_moms_times.txt  16x16_random_abs_backtracks.txt  16x16_random_abs_times.txt  16x16_random_backtracks.txt  16x16_random_times.txt  16x16_sdk_times.txt  16x16_shortest_pos_backtracks.txt  16x16_shortest_pos_times.txt  4x4_jw_time.txt  4x4_jw_times.txt  4x4_moms_time.txt  4x4_moms_times.txt  4x4_random_abs_time.txt  4x4_random_abs_times.txt  4x4_random_time.txt  4x4_random_times.txt  4x4_sdk_time.txt  4x4_sdk_times.txt  9x9_jw_decisions.txt  (+20 more)
quality/: .semgrep.yml  .semgrepignore  pyproject.toml
quality/pitchai_quality/: __init__.py  analysis_support.py  check.py  check_nested_event_loops.py  check_no_dense_inline_comprehensions.py  check_no_pure_wrapper_functions.py  check_no_single_use_one_line_functions.py  check_no_vague_signatures.py  check_no_validation_bypasses.py  pure_wrapper_index.py  pure_wrapper_resolution.py  single_use_reporting.py  source_files.py  strict_policy.py
(+13 files in other folders)
